--- a/NSci253_LesPlan03.Rmd
+++ b/NSci253_LesPlan03.Rmd
@@ -4,7 +4,6 @@ subtitle: Lesson Plan 3 - Precipitation
 author: "Charles Jason Tinant"
 date: "2/19/2018"
 output:
-  pdf_document: default
   html_document:
     df_print: paged
 fontsize: 12pt
@@ -41,9 +40,10 @@ Precipitation is the single most important variable driving hydrologic processes
 ## Homework (note there will be another couple of problems )
 You are welcome to turn in homework in Rmd, pdf, html or Word.  Upload the file into a folder with your name in Google Drive. 
 
-1. Vocabulary - Summarize the terms: weather, climate, frontal precipitation, convection, orographic, stratosphere, troposphere, jet stream
+###1. Vocabulary - Summarize the terms: weather, climate, frontal precipitation, convection, orographic, stratosphere, troposphere, jet stream
+write your answer here...
 
-2. Use the following link: [Koeppen Climate](http://koeppen-geiger.vu-wien.ac.at/pdf/KG_USA_UScounty.pdf) to download a map of Koeppen climates for the United States. What is the climate for Western South Dakota?  What is the climate for Eastern South Dakota.
+###2. Use the following link: [Koeppen Climate](http://koeppen-geiger.vu-wien.ac.at/pdf/KG_USA_UScounty.pdf) to download a map of Koeppen climates for the United States. What is the climate for Western South Dakota?  What is the climate for Eastern South Dakota.
 
 2. Use the following link: [Drought Monitor](http://droughtmonitor.unl.edu/) - What is the drought intensity for this week for the county you live in? If your county is in drought, then is the drought short-term or long-term?  What is the drought summary for the High Plains?  What is the the drought summary for the West?
 
@@ -184,4 +184,38 @@ Climate tends to have distinct wetter and drier periods (Figure 2.7), with perio
 ### Averaging over space and time
 The averaging period for rainfall depth and intensity can be important, depending on the question of interest.  Shorter averaging periods (15 minute data or shorter) can show differences in intensity over a storm.  However, daily or even monthly data is useful for most hydrologic budget studies.
 
-Precipitation is measured at points often using tipping rainfall buckets, or by pillows to measure the snowfall mass.  These point measurements can be averaged over an area such as a watershed using different approaches such as Theissen polygons or by contouring that can be automated in ArcGIS or R.
+Precipitation is measured at points often using tipping rainfall buckets, or by pillows to measure the snowfall mass.  These point measurements can be averaged over an area such as a watershed using different approaches such as Theissen polygons and contouring that can be automated in ArcGIS or R.
+
+### Rainfall freqency distributions
+
+
+
+
+
+
+```{r}
+# I collected station data for Cottonwood station, SD from 
+# NOAA's National Centers for Environmental Information (NCEI)
+# https://www.ncdc.noaa.gov/cdo-web/
+
+
+
+
+
+
+# Here is what the columns mean
+#EVAP - Evaporation of water from evaporation pan
+#DAPR - Number of days included in the multiday precipitation total (MDPR)
+#DAEV - Number of days included in the multiday evaporation total (MDEV)
+#SNOW - Snowfall
+#PRCP - Precipitation
+#MNPN - Daily minimum temperature of water in an evaporation pan
+#MDEV - Multiday evaporation total (use with DAEV)
+#MXPN - Daily maximum temperature of water in an evaporation pan
+#MDPR - Multiday precipitation total (use with DAPR and DWPR, if available)
+#MDSF - Multiday snowfall total
+#SNWD - Snow depth
+#DASF - Number of days included in the multiday snow fall total (MDSF) 
+```
+
+
